# pattern

./: CMakeLists.txt  adapter.cpp  adapter.h  builder.cpp  builder.h  decorator.cpp  decorator.h  factory.cpp  factory.h  main.cpp  modulemethod.cpp  modulemethod.h  observer.cpp  observer.h  proxy.cpp  proxy.h  strategy.cpp  strategy.h
